--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a class="socials-square__link btn" href="https://www.snapchat.com/add/jackk_christian?share_id=rltGD_LtdpQ&locale=en-US" target="_blank"><i class="ph-bold ph-snapchat-logo"></i></a>
               </li>
               <li class="socials-square__item">
-                <a class="socials-square__link btn" href="https://wa.me/+919512847134" target="_blank"><i class="ph-bold ph-whatsapp-logo"></i></a>
+                <a class="socials-square__link btn" href="sms:+919512847134" target="_blank"><i class="ph-bold ph-whatsapp-logo"></i></a>
               </li>
               <li class="socials-square__item">
                 <a class="socials-square__link btn" href="https://www.linkedin.com/in/jack-christian-a34a6126b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="ph-bold ph-linkedin-logo"></i></a>
